fix tooltip z-index

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -87,6 +87,7 @@ body {
             border-radius: 6px;
             font-size: 1rem;
             white-space: break-spaces;
+            z-index: 100;
         }
     }
 
